frontend/tests/errors/ER-005/non_constant_expression/test.vx
// @rfc: docs/vexel-rfc.md#types
// @desc: Compile-time execution propagates through local assignment chains | Local array size after pure call and arithmetic folds at compile time


&^compute() -> #i32 {
    5;
}

&^main() -> #i32 {
    len:#i32 = compute();
    len = len + 1;
    data:#i32[len];
    0;
}
